--- a/ro/mail/chrome/messenger-newsblog/newsblog.properties
+++ b/ro/mail/chrome/messenger-newsblog/newsblog.properties
@@ -33,3 +33,6 @@ newsblog-feedNotValidTitle=Flux nevalid
 ## LOCALIZATION NOTE(newsblog-feedNotValid): %S is the feed URL
 newsblog-feedNotValid=%S nu este un flux valid.
 newsblog-getNewMsgsCheck=Se verifică dacă fluxurile au noutăți…
+
+## LOCALIZATION NOTE(feeds-accountname): This string should be the same as feeds.accountName in am-newsblog.dtd
+feeds-accountname=Bloguri și fluxuri de știri
