--- a/ro/mail/chrome/messenger/addressbook/addressBook.properties
+++ b/ro/mail/chrome/messenger/addressbook/addressBook.properties
@@ -77,7 +77,7 @@ confirmDeleteMailingLists=Sigur doriți să ștergeți listele de expediție sel
 propertyPrimaryEmail=Email
 propertyListName=Nume listă
 propertySecondaryEmail=Email suplimentar
-propertyScreenName=Nume pt. mesagerie
+propertyScreenName=Numele pentru mesagerie
 propertyNickname=Pseudonim
 propertyDisplayName=Nume de afișat
 propertyWork=Serviciu
@@ -115,6 +115,8 @@ prefixCc=Cc
 prefixBcc=Bcc
 addressBook=Agendă de contacte
 
+browsePhoto=Poză de contact
+
 # mailnews.js
 ldap_2.servers.pab.description=Agendă personală de contacte
 ldap_2.servers.history.description=Adrese adunate
@@ -130,16 +132,21 @@ noMatchFound=Nici o fișă găsită
 matchFound=1 rezultat
 matchesFound=%S rezultate
 
-cardsCopied=Am copiat %S fișe
-cardCopied=Am copiat 1 fișă
-cardsMoved=%S carduri de adrese mutate
-cardMoved=1 card de adrese mutat
+## LOCALIZATION NOTE (contactsCopied): Semi-colon list of plural forms
+## %1$S is the number of contacts that were copied. This should be used multiple
+## times wherever you need it. Do not replace by %S.
+contactsCopied=%1$S contact copiat;%1$S contacte copiate
+
+## LOCALIZATION NOTE (contactsMoved): Semi-colon list of plural forms
+## %1$S is the number of contacts that were moved. This should be used multiple
+## times wherever you need it. Do not replace by %S.
+contactsMoved=%1$S contact mutat;%1$S contacte mutate
 
 # LDAP directory stuff
 invalidName=Vă rog introduceți un nume valid.
 invalidHostname=Vă rog introduceți un nume de host valid.
 invalidPortNumber=Vă rog introduceți un număr de port valid.
-invalidResults=Vă rog introduceți un număr corect în câmpul Rezultate.
+invalidResults=Vă rugăm să introduceți un număr corect în câmpul rezultate.
 abReplicationOfflineWarning=Trebuie să fiți conectat(ă) pentru a efectua replicare LDAP
 abReplicationSaveSettings=Trebuie să salvați setările înainte să puteți descărca un director.
 
