--- a/ro/mail/chrome/messenger/imapMsgs.properties
+++ b/ro/mail/chrome/messenger/imapMsgs.properties
@@ -42,12 +42,12 @@
 # Status - opening folder
 ## @name IMAP_STATUS_SELECTING_MAILBOX
 ## @loc None
-5000=Deschid dosarul…
+5000=Se deschide dosarul %S…
 
 # Status - create folder
 ## @name IMAP_STATUS_CREATING_MAILBOX
 ## @loc None
-5001=Creez dosarul…
+5001=Se creează dosarul…
 
 # Status - deleting a folder
 ## @name IMAP_STATUS_DELETING_MAILBOX
@@ -55,7 +55,7 @@
 # LOCALIZATION NOTE (Error 5002): The "%S" below should not be translated.
 # Instead, insert "%S" in your translation where you wish to display the name
 # of the folder being deleted.
-5002=Șterg dosarul %S…
+5002=Se șterge dosarul %S…
 
 # Status - renaming mailbox
 ## @name IMAP_STATUS_RENAMING_MAILBOX
@@ -63,12 +63,12 @@
 # LOCALIZATION NOTE (Error 5003): The "%S" below should not be translated.
 # Instead, insert "%S" in your translation where you wish to display the name
 # of the folder being renamed.
-5003=Redenumesc dosarul %S…
+5003=Se redenumește dosarul %S…
 
 # Status - looking for mailboxes
 ## @name IMAP_STATUS_LOOKING_FOR_MAILBOX
 ## @loc None
-5004=Caut dosare…
+5004=Se caută dosare…
 
 # Status - subscribing to mailbox
 ## @name IMAP_STATUS_SUBSCRIBE_TO_MAILBOX
@@ -76,7 +76,7 @@
 # LOCALIZATION NOTE (Error 5005): The "%S" below should not be translated.
 # Instead, insert "%S" in your translation where you wish to display the name
 # of the folder being subscribed to.
-5005=Mă abonez la dosarul %S…
+5005=Abonare la dosarul %S…
 
 # Status - unsubscribing from mailbox
 ## @name IMAP_STATUS_UNSUBSCRIBE_MAILBOX
@@ -84,37 +84,37 @@
 # LOCALIZATION NOTE (Error 5005): The "%S" below should not be translated.
 # Instead, insert "%S" in your translation where you wish to display the name
 # of the folder being unsubscribed from.
-5006=Mă dezabonez de la dosarul %S…
+5006=Dezabonare de la dosarul %S…
 
 # Status - searching imap folder
 ## @name IMAP_STATUS_SEARCH_MAILBOX
 ## @loc None
-5007=Caut dosarul…
+5007=Se caută dosarul…
 
 # Status - getting message info
 ## @name IMAP_STATUS_MSG_INFO
 ## @loc None
-5008=Primesc informații mesaj…
+5008=Se obțin informații despre mesaj…
 
 # Status - closing a folder
 ## @name IMAP_STATUS_CLOSE_MAILBOX
 ## @loc None
-5009=Închid dosarul…
+5009=Se închide dosarul…
 
 # Status - compacting a folder
 ## @name IMAP_STATUS_EXPUNGING_MAILBOX
 ## @loc None
-5010=Compactez dosarul…
+5010=Se compactează dosarul…
 
 # Status - logging out
 ## @name IMAP_STATUS_LOGGING_OUT
 ## @loc None
-5011=Fac logout…
+5011=Dezautentificare…
 
 # Status - checking server capabilities
 ## @name IMAP_STATUS_CHECK_COMPAT
 ## @loc None
-5012=Verific capabilitățile serverului de mail…
+5012=Se verifică capabilitățile serverului de mail…
 
 # Status - logging on
 ## @name IMAP_STATUS_SENDING_LOGIN
@@ -128,37 +128,16 @@
 
 ## @name IMAP_DOWNLOADING_MESSAGE
 ## @loc None
-5015=Descarc mesajul…
-
-## @name IMAP_STATUS_GETTING_NAMESPACE
-## @loc None
-# LOCALIZATION NOTE (Error 5020): Do not translate the word "IMAP" below.
-5020=Verific spațiul de nume IMAP…
-
-## @name IMAP_UPGRADE_NO_PERSONAL_NAMESPACE
-## @loc None
-5021="Serverul de mail indică faptul că e posibil să nu aveți dosare de mail personale. Vă rog verificați-vă abonamentele.
-
-## @name IMAP_UPGRADE_PROMPT_USER_2
-## @loc None
-5024=Dosarele la care nu vă abonați nu vor apărea în listele de dosare, însă vă veți putea abona la ele alegând Fișier / Abonamente.
-
-## @name IMAP_UPGRADE_CUSTOM
-## @loc None
-5026=Vă rog alegeți dosarele la care doriți să vă abonați în fereastra Abonamente…
-
-## @name IMAP_UPGRADE_SUCCESSFUL
-## @loc None
-5028=Upgrade reușit.
+5015=Se descarcă mesajul…
 
 ## @name IMAP_GETTING_ACL_FOR_FOLDER
 ## @loc None
 # LOCALIZATION NOTE (Error 5029): Do not translate the word "ACL" below.
-5029=Primesc ACL-ul pentru dosar…
+5029=Se obține ACL pentru dosar…
 
 ## @name IMAP_GETTING_SERVER_INFO
 ## @loc None
-5030=Primesc informații configurație server…
+5030=Se primesc informații despre configurația serverului…
 
 ## @name IMAP_GETTING_MAILBOX_INFO
 ## @loc None
@@ -168,47 +147,33 @@
 ## @loc None
 5032=Acest fragment al corpului va fi descărcat la cerere.
 
-## @name IMAP_UNABLE_TO_SAVE_MESSAGE
-## @loc None
-# LOCALIZATION NOTE (Error 5033): Do not translate the word "IMAP" below.
-5033=Eroare IMAP: Mesajul nu poate fi salvat datorită unei erori.
-
-## @name IMAP_NO_ONLINE_FOLDER
-## @loc None
-# LOCALIZATION NOTE (Error 5034): Do not translate the word "IMAP" below.
-5034=Eroare IMAP: Nu pot obține informațiile despre dosarul de pe rețea.
-
-## @name IMAP_LOGIN_FAILED
-## @loc None
-5035=Login eșuat la serverul %S.
-
 ## @name IMAP_RECEIVING_MESSAGE_HEADERS_OF
 ## @loc None
 # LOCALIZATION NOTE (Error 5036): Do not translate the word "%S" or "%lu" below.
 # Place the word %S in your translation where the name of the server should appear.
 # Place the word %lu where the number of headers should appear.
-5036=Primesc de la %S: antete mesaje: %lu din %lu
+5036=Se descarcă antete de mesaje de pe %S: %lu din %lu
 
 ## @name IMAP_RECEIVING_MESSAGE_FLAGS_OF
 ## @loc None
 # LOCALIZATION NOTE (Error 5037): Do not translate the word "%S" or "%lu" below.
 # Place the word %S in your translation where the name of the server should appear.
 # Place the word %lu where the number of flags should appear.
-5037=Primesc de la %S: flag-uri mesaje: %lu din %lu
+5037=Se descarcă marcaje de mesaje de pe %S: %lu din %lu
 
 ## @name IMAP_DELETING_MESSAGES
 ## @loc None
-5038=Șterg mesaje…
+5038=Se șterg mesaje…
 
 ## @name IMAP_DELETING_MESSAGE
 ## @loc None
-5039=Șterg mesajul…
+5039=Se șterge mesajul…
 
 ## @name IMAP_MOVING_MESSAGES_TO
 ## @loc None
 # LOCALIZATION NOTE (Error 5040): Do not translate the word "%S" below.
 # Place the word %S in your translation where the name of the folder should appear.
-5040=Mut mesaje în %S…
+5040=Se mută mesajele în %S…
 
 ## @name IMAP_MOVING_MESSAGE_TO
 ## @loc None
@@ -220,32 +185,26 @@
 ## @loc None
 # LOCALIZATION NOTE (Error 5042): Do not translate the word "%S" below.
 # Place the word %S in your translation where the name of the folder should appear.
-5042=Copiez mesaje în %S…
+5042=Se copiază mesajele în %S…
 
 ## @name IMAP_COPYING_MESSAGE_TO
 ## @loc None
 # LOCALIZATION NOTE (Error 5043): Do not translate the word "%S" below.
 # Place the word %S in your translation where the name of the folder should appear.
-5043=Copiez mesajul în %S…
-
-## @name IMAP_SELECTING_MAILBOX
-## @loc None
-# LOCALIZATION NOTE (Error 5044): Do not translate the word "%S" below.
-# Place the word %S in your translation where the name of the folder should appear.
-5044=Deschid dosarul %S…
+5043=Se copiază mesajul în %S…
 
 ## @name IMAP_FOLDER_RECEIVING_MESSAGE_OF
 ## @loc None
 # LOCALIZATION NOTE (Error 5045): Do not translate the word "%S" or "%lu" below.
 # Place the word %S in your translation where the name of the folder should appear.
 # Place the word %lu where the number of headers should appear.
-5045=Primesc de la %S: mesajul %lu din %lu
+5045=Se descarcă de pe %S mesajul %lu din %lu
 
 ## @name IMAP_DISCOVERING_MAILBOX 
 ## @loc None
 # LOCALIZATION NOTE (Error 5046): Do not translate the word "%S" below.
 # Place the word %S in your translation where the name of the folder should appear.
-5046=Găsit dosarul: %S
+5046=S-a găsit dosarul: %S
 
 ## @name IMAP_ENTER_PASSWORD_PROMPT
 ## @loc None
@@ -380,10 +339,6 @@
 ## @loc None
 5082=Administrare dosar
 
-## @name IMAP_UNKNOWN_USER
-## @loc None
-5083=Necunoscut
-
 ## @name IMAP_SERVER_DOESNT_SUPPORT_ACL
 ## @loc None
 5084=Serverul nu suportă dosare partajate.
@@ -395,10 +350,6 @@
 ## @name IMAP_SERVER_DISCONNECTED
 ## @loc None
 5090= Serverul %S a întrerupt conexiunea. Se poate ca serverul să fi căzut sau să fie o problemă cu rețeaua.
-
-## @name IMAP_REDIRECT_LOGIN_FAILED
-## @loc None
-5091=Login eșuat.
 
 # LOCALIZATION NOTE (autoSubscribeText): %1$S is the imap folder.
 5092=Doriți să vă abonați la %1$S?
@@ -436,10 +387,6 @@
 # Place the word %2$S where the total number of messages should appear.
 5103=Copiez mesajul %1$S din %2$S în %3$S
 
-## @name IMAP_LOGIN_DISABLED
-## @loc None
-5104=Nu vă puteți autentifica la %S deoarece serverul a dezactivat autentificarea. Este posibil să fie nevoie să vă conectați prin SSL sau TLS. Vă rog verificați parametrii serverului de mail definiți în contul dumneavoastră.
-
 ## @name IMAP_MOVE_FOLDER_TO_TRASH
 ## @loc None
 # LOCALIZATION NOTE (5105): Do not translate the word %S below.
@@ -459,3 +406,8 @@
 ## @name IMAP_DELETE_FOLDER_BUTTON_LABEL
 ## @loc None
 5108=Șterge &dosarul
+
+## @name IMAP_LOGIN_DISABLED
+## @loc None
+# LOCALIZATION NOTE (5109): %S is the server address
+5109=Nu vă puteți autentifica pe %S pentru că serverul nu permite autentificarea în text în clar fără STARTTLS sau SSL/TLS. Încercați să activați securitatea conexiunii sau autentificarea securizată din setările contului.
