--- a/ro/mail/chrome/messenger/messenger.properties
+++ b/ro/mail/chrome/messenger/messenger.properties
@@ -43,6 +43,8 @@ newFolderMenuItem=Dosar…
 newSubfolderMenuItem=Subdosar…
 newFolder=Dosar nou…
 newSubfolder=Subdosar nou…
+markFolderRead=Marchează dosarul ca citit;Marchează dosarele ca citite
+markNewsgroupRead=Marchează grupul de discuție ca citit;Marchează grupurile de discuții ca citite
 folderProperties=Proprietățile dosarului
 newTag=Etichetă nouă…
 getNextNMessages=Adu următoarele %S subiecte de discuție
@@ -62,8 +64,8 @@ LoadingMessageToPrint=Se încarcă mesajul de tipărit…
 MessageLoaded=Mesaj încărcat…
 PrintingMessage=Se tipărește mesajul…
 PrintPreviewMessage=Se previzualizează tipărirea mesajului…
-PrintingCard=Se tipăresc datele de contact…
-PrintPreviewCard=Se previzualizează tipărirea datelor de contact…
+PrintingContact=Tipărire contact…
+PrintPreviewContact=Previzualizare tipărire contact…
 PrintingAddrBook=Se tipărește agenda de contacte…
 PrintPreviewAddrBook=Se previzualizează tipărirea agendei de contacte…
 PrintingComplete=Gata.
@@ -172,7 +174,6 @@ outboxFolderName=De trimis
 junkFolderName=Spam
 archivesFolderName=Arhive
 
-
 # Error message for special folder deletion on imap accounts
 # LOCALIZATION NOTE (specialFolderDeletionErr): Do not translate "IMAP" in the line below
 specialFolderDeletionErr=Ștergerea dosarului special %S nu este permisă în cazul conturilor IMAP.
@@ -253,7 +254,7 @@ hasAttachments=Are anexe
 tag=Etichete
 
 # mailnews.js
-mailnews.send_default_charset=ISO-8859-2
+mailnews.send_default_charset=UTF-8
 mailnews.view_default_charset=UTF-8
 
 # generate display names in last first order
@@ -299,7 +300,7 @@ nocachedbodybody=Conținutul acestui mesaj nu a fost descărcat de pe server pen
 mailnews.account_central_page.url=chrome://messenger/content/msgAccountCentral.xul
 # LOCALIZATION NOTE(acctCentralTitleFormat): %1$S is brand, %2$S is account type, %3$S is account name
 acctCentralTitleFormat=%1$S %2$S - %3$S
-mailAcctType=Poștă
+mailAcctType=Corespondență
 newsAcctType=Știri
 
 # LOCALIZATION NOTE(nocachedbodytitle): Do not translate "<TITLE>" or "</TITLE>" in the line below
@@ -308,6 +309,9 @@ nocachedbodytitle=<TITLE>Conectați-vă pentru a vedea acest mesaj</TITLE>\n
 # mailWindowOverlay.js
 confirmUnsubscribeTitle=Confirmare dezabonare
 confirmUnsubscribeText=Sigur doriți să vă dezabonați de la %S?
+confirmUnsubscribeManyText=Sigur doriți să vă dezabonați de la aceste grupuri de discuții?
+feedNoSummaryTitle=Niciun sumar pentru flux
+feedNoSummaryAlert=Acesta este un flux de știri într-un format vechi care nu stochează sumarul fiecărei știri. Ca urmare, nu poate fi afișat.
 
 # msgHdrViewOverlay.js
 openLabel=Deschide
@@ -413,20 +417,28 @@ confirmPhishingTitle=Mesajul poate fi o păcăleală
 confirmPhishingUrl=%1$S crede că acest mesaj poate fi o păcăleală. Legăturile din mesaj ar putea să vă ducă la pagini care nu sunt cele pe care le credeți a fi. Sigur doriți să vizitați %2$S?
 
 # Check for Updates
+# LOCALIZATION NOTE (updatesItem_*): these are alternative labels for Check for Update item in Help menu.
+# Which one is used depends on Update process state.
 updatesItem_default=Caută actualizări…
 updatesItem_defaultFallback=Caută actualizări…
+updatesItem_default.accesskey=C
 updatesItem_downloading=Se descarcă %S…
 updatesItem_downloadingFallback=Se descarcă actualizarea…
+updatesItem_downloading.accesskey=d
 updatesItem_resume=Se reia descărcarea %S…
 updatesItem_resumeFallback=Se reia descărcarea actualizării…
+updatesItem_resume.accesskey=d
 updatesItem_pending=Aplică actualizarea descărcată acum…
 updatesItem_pendingFallback=Aplică actualizarea descărcată acum…
+updatesItem_pending.accesskey=d
 
 # Folder Pane Header Title Strings
 folderPaneHeader_all=Toate dosarele
 folderPaneHeader_unread=Dosare necitite
 folderPaneHeader_favorite=Dosare favorite
 folderPaneHeader_recent=Dosare recente
+folderPaneHeader_smart=Dosare inteligente
+smartAccountName=Dosare inteligente
 
 # Copy / Move to Folder Again
 #LOCALIZATION NOTE %1$S is the name of the folder we will move to. moveToFolderAgainAccessKey
@@ -441,8 +453,8 @@ moveToFolderAgainAccessKey=t
 copyToFolderAgain=Copiază din nou în „%1$S”
 copyToFolderAgainAccessKey=t
 
-#LOCALIZATION NOTE %1$S is the e-mail address of the person we will allow remote images for
-alwaysLoadRemoteContentForSender1= Încarcă întotdeauna imaginile aflate la distanță pentru %1$S 
+#LOCALIZATION NOTE %1$S is the e-mail address of the person we will allow remote content for
+alwaysLoadRemoteContentForSender2= Încarcă întotdeauna de la %1$S conținutul aflat la distanță 
 
 # Strings for growl notifications on Mac OS X
 growlNotification=Corespondență nouă
@@ -464,12 +476,21 @@ fileNotFoundTitle = Fișierul nu a fost găsit
 #LOCALIZATION NOTE(fileNotFoundMsg): %S is the filename
 fileNotFoundMsg = Fișierul %S nu există.
 
+fileEmptyTitle = Fișier gol
+#LOCALIZATION NOTE(fileEmptyMsg): %S is the filename
+fileEmptyMsg = Fișierul %S este gol.
+
 # second person direct object pronoun; used in the collapsed header view if
 # the user is in the To or Cc field of a message
 headerFieldYou=Dumneavoastră
 
-# The what's new tab title, shown on version update
-whatsNew=Ce e nou
+# Shown when content tabs are being loaded.
+loadingTab=Încărcare...
+
+applyToCollapsedMsgsTitle=Confirmați ștergerea mesajelor din conversații restrânse
+applyToCollapsedMsgs=Avertisment - se vor șterge mesajele din conversațiile restrânse
+applyToCollapsedAlwaysAskCheckbox=Întreabă-mă întotdeauna înainte de a șterge mesaje din conversații restrânse
+applyNowButton=Aplică
 
 #LOCALIZATION NOTE (glodaSearch_results_why_*):  These strings populate the
 # glodaWhyColumn when performing a gloda-backed search, explaining why a
@@ -482,3 +503,14 @@ glodaSearch_results_why_contact=Contact
 glodaSearch_results_why_subject=Subiect
 glodaSearch_results_why_body=Conținut
 glodaSearch_results_why_attachment=Anexă
+
+mailServerLoginFailedTitle=Autentificare eșuată
+# LOCALIZATION NOTE (mailServerLoginFailedTitle): Insert "%S" in your
+# translation where you wish to display the hostname of the server to which
+# login failed.
+mailServerLoginFailed=Autentificarea pe serverul %S a eșuat.
+mailServerLoginFailedRetryButton=Încea&rcă din nou
+mailServerLoginFailedEnterNewPasswordButton=Introduc&eți parola nouă
+
+extensions.{972ce4c6-7e08-4474-a285-3208198ce6fd}.name=Implicit
+extensions.{972ce4c6-7e08-4474-a285-3208198ce6fd}.description=Tema implicită.
