--- a/ro/mail/chrome/messenger/messengercompose/composeMsgs.properties
+++ b/ro/mail/chrome/messenger/messengercompose/composeMsgs.properties
@@ -62,10 +62,10 @@
 12507=Nu pot posta la mai multe servere news. Ia mai încearcă.
 
 ## @name NS_MSG_ASSEMB_DONE_MSG
-12508=Asamblez mesajul…Gata
+12508=Se asamblează mesajul…Gata
 
 ## @name NS_MSG_ASSEMBLING_MSG
-12509=Asamblez mesajul…
+12509=Se asamblează mesajul…
 
 ## @name NS_MSG_NO_SENDER
 12510=Nu ați specificat expeditorul. Completați-vă adresa de email în setările contului.
@@ -95,7 +95,7 @@
 12520=Trimiterea mesajului a eșuat.
 
 ## @name SMTP_DELIV_MAIL
-12521=Expediez mail…
+12521=Se expediază mesajul…
 
 ## @name SMTP_MESSAGE_SENT_WAITING_MAIL_REPLY
 12522=Mail: Mesaj trimis; aștept răspunsul…
@@ -131,13 +131,13 @@
 12533=A apărut o problemă la includerea fișierului %.200s în mesaj. Continuați salvarea mesajului fără acest fișier?
 
 ## @name NS_MSG_ASSEMBLING_MESSAGE
-12534=Asamblez informații mail…
+12534=Se asamblează informațiile despre mesaj…
 
 ## @name NS_MSG_GATHERING_ATTACHMENT
-12535=Anexez %s…
+12535=Se anexează %s…
 
 ## @name NS_MSG_CREATING_MESSAGE
-12536=Creez mesajul…
+12536=Se creează mesajul…
 
 ## @name NS_MSG_FAILURE_ON_OBJ_EMBED_WHILE_SENDING
 12537=A apărut o problemă la includerea fișierului %.200s în mesaj. Continuați trimiterea mesajului fără acest fișier?
@@ -153,15 +153,6 @@
 
 ## @name NS_MSG_LARGE_MESSAGE_WARNING
 12541=Atenție! Sunteți pe cale de a trimite un mesaj de %d octeți. Sigur doriți să faceți asta?
-
-## @name NS_SMTP_PASSWORD_PROMPT1
-12543=Introduceți parola pentru %S:
-
-## @name NS_SMTP_PASSWORD_PROMPT2
-12544=Introduceți parola pentru %S la %S:
-
-## @name NS_SMTP_CONNECTING_TO_SERVER
-12545=Inițiez conexiunea cu serverul…
 
 ## @name NS_MSG_SENDING_MESSAGE
 12550=Trimit mesajul…
@@ -236,9 +227,6 @@
 ## @name NS_ERROR_SMTP_PASSWORD_UNDEFINED
 12584=A apărut o eroare la trimiterea mesajului: nu s-a putut obține parola pentru %S. Mesajul nu a fost trimis.
 
-## @name NS_SMTP_PASSWORD_PROMPT_TITLE
-12585=E necesară parola pentru serverul SMTP
-
 ## @name NS_ERROR_SMTP_TEMP_SIZE_EXCEEDED
 12586=Mărimea mesajului pe care încercați să-l trimiteți depășește limita temporară de mărime a serverului. Mesajul nu a fost trimis; încercați să reduceți mărimea mesajului sau așteptați un timp după care încercați din nou. Răspunsul serverului este: %s.
 
@@ -274,15 +262,20 @@ chooseFileToAttach=Anexare fișier(e)
 ##
 windowTitlePrefix=Redactare mesaj:
 
-## String used by the dialog that ask the user to enter a subject
-sendMsgTitle=Trimitere mesaj
-subjectDlogMessage=Nu ați specificat un subiect pentru acest mesaj. Dacă doriți să specificați unul, introduceți-l acum.
+## Strings used by the empty subject dialog
+subjectEmptyTitle=Amintire de lipsa subiectului
+subjectEmptyMessage=Mesajul dumneavoastră nu are un subiect.
+sendWithEmptySubjectButton=Trimite fără &subiect
+cancelSendingButton=&Anulează trimiterea
 
-## String used by the dialog that informs the user about the newsgroup recipient
+## Strings used by the dialog that informs about lack of newsgroup support.
+noNewsgroupSupportTitle=Grupurile de discuții nu sunt suportate
 recipientDlogMessage=Acest cont acceptă doar destinatari pentru email. Continuând, vor fi ignorate grupurile de news.
 
-#String used by the alert that tells the user an e-mail address is invalid
+## Strings used by the alert that tells the user an e-mail address is invalid.
+addressInvalidTitle=Adresă de destinatar nevalidă
 addressInvalid=%1$S nu este o adresă de email validă intrucât nu are forma nume@domeniu. Trebuie să o corectați înainte de a putea trimite mesajul.
+
 ## String used by the dialog that ask the user to attach a web page
 attachPageDlogTitle=Vă rog specificați locația de anexat
 attachPageDlogMessage=Pagina web (URL):
@@ -327,3 +320,32 @@ mailnews.reply_header_originalmessage=-------- Mesajul original --------
 ## Strings used by the rename attachment dialog
 renameAttachmentTitle=Redenumire anexă
 renameAttachmentMessage=Noul nume al anexei:
+
+## Attachment Reminder
+## LOCALIZATION NOTE (mail.compose.attachment_reminder_keywords): comma separated
+##   words that that should trigger an attachment reminder.
+mail.compose.attachment_reminder_keywords=anexă,anexat,atașament,atașat,.doc,.pdf,cv,scrisoare de intenție,attachment,attached,resume,cover letter
+
+addAttachmentButton=Adaugă o anexă…
+addAttachmentButton.accessskey=A
+remindLaterButton=Amintește-mi mai târziu
+remindLaterButton.accessskey=R
+
+attachmentReminderTitle=Verificator de anexe lipsă
+attachmentReminderMsg=Ați uitat să anexați un fișier?
+# LOCALIZATION NOTE (attachmentReminderKeywordsMsgs): Semi-colon list of plural forms.
+# See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
+# #1 number of keywords
+attachmentReminderKeywordsMsgs=S-a găsit un cuvânt cheie pentru anexe:;S-au găsit #1 cuvinte cheie pentru anexe:
+attachmentReminderOptionsMsg=Cuvintele ce permit detecția anexelor lipsă pot fi configurate în preferințe
+attachmentReminderYesIForgot=Da, așa e!
+attachmentReminderFalseAlarm=Nu, trimite așa
+
+## LOCALIZATION NOTE(smtpEnterPasswordPrompt): Do not translate the
+## word $S. Place the word $S where the host name should appear.
+smtpEnterPasswordPrompt=Introduceți parola pentru %S:
+## LOCALIZATION NOTE(smtpEnterPasswordPromptWithUsername): Do not translate the
+## words %1$S and %2$S. Place the word %1$S where the host name should appear,
+## and %2$S where the user name should appear.
+smtpEnterPasswordPromptWithUsername=Introduceți parola pentru %2$S de pe %1$S:
+smtpEnterPasswordPromptTitle=E necesară parola pentru serverul SMTP
