--- a/ro/mail/chrome/messenger/vcard.properties
+++ b/ro/mail/chrome/messenger/vcard.properties
@@ -197,7 +197,7 @@
 # VCARD_LDAP_NAME_PREFIX
 ## @name VCARD_LDAP_NAME_PREFIX
 ## @loc None
-1031=Titlu
+1031=Prefix
 
 # VCARD_LDAP_NAME_SUFFIX
 ## @name VCARD_LDAP_NAME_SUFFIX
